feat: zepp life sync
